# Autonomous-Garbage-Collection-Robot-System

Autonomous_Garbage_Collection/: package.xml
Autonomous_Garbage_Collection/include/mario_com/: RobotSim.hpp
Autonomous_Garbage_Collection/src/: Manipulation.cpp  Navigation.cpp  RobotSim.cpp  main.cpp
mario_com/include/mario_com/: Manipulation.hpp  Navigation.hpp  Perception.hpp
mario_com/src/: Perception.cpp
